--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -327,8 +327,9 @@ TADs were already shown to associate with diverse genomic functions such as hist
 We previously showed a significant association of TAD disruptions by large chromosomal deletions with clinical phenotypes, likely caused by an enhancer adaption mechanism [@Ibn-Salem2014; @Lupianez2015].
 However, it is still unclear how exactly the genome folds into TADs and what consequence this has for gene regulation during evolution and in genetic diseases. For example, it is not clear to which extends genes within the same TAD are expressed and regulated in a coordinated manner. Despite initial evidence of evolutionary conservation of TADs in homologous regions between human and mouse [@Dixon2012; @VietriRudan2015], there was no systematic analysis of the stability of TADs during evolution and the consequences of TAD disruptions on gene expression divergence between species. The accumulating evidence of the critical gene regulatory function of TADs leads to the question if TADs play an essential role in genetic diseases [@Spielmann2016]. More specifically, TADs might be used together with other genomic annotations, such as enhancers and their interactions with regulated genes to interpret structural variations in patient genomes. 
 Furthermore, increasing mechanistic understanding of chromatin looping interactions and TAD formation could be used to improve genome-wide contact maps and predict long-range interactions in diverse tissues and conditions.
-Therefore, this thesis addresses the question whether TADs represent only structural units of genomes or also crucial functional building blocks and necessary for coordinated gene regulation.
-By computationally integrating genome-wide chromatin interaction maps with diverse genomic datasets, including sequence conservation, regulatory activity, protein binding, gene expression and clinical phenotypes, I address the following questions.
+
+Therefore, this thesis addresses the question whether TADs represent only structural units of genomes or also crucial functional building blocks that are essential for coordinated gene regulation during evolution an healthy development.
+By computationally integrating genome-wide chromatin interaction maps with diverse genomic datasets, including sequence conservation, regulatory activity, protein binding, gene expression and clinical phenotypes, this work addresses the following questions.
 
 
 **Is the three-dimensional folding structure of genomes associated with co-regulation of functionally related genes?**
